# HMT

./: .gitignore  AnimateMap.py  CG.cpp  CG.h  CMakeLists.txt  Discretizer.cpp  Discretizer.h  ExpressionParser.cpp  ExpressionParser.h  GS.cpp  GS.h  MainSolver.cpp  Material.cpp  Material.h  Medic.cpp  Medic.h  Mesh.cpp  Mesh.h  NewPlot.py  PlotPoint.py  Probe.cpp  Probe.h  README.md  Solver.cpp  Solver.h  example.json  libArithmetic.h
